2012-04-17  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/53003
	* g++.dg/parse/crash59.C: New.

2012-04-16  Jason Merrill  <jason@redhat.com>

	PR c++/38543
	* g++.dg/cpp0x/variadic131.C: New.

2012-04-16  Jason Merrill  <jason@redhat.com>

	PR c++/50830
	* g++.dg/cpp0x/variadic129.C: New.

	PR c++/50303
	* g++.dg/cpp0x/variadic128.C: New.

2012-04-16  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline
	2012-04-12  Uros Bizjak  <ubizjak@gmail.com>

	PR target/52932
	* gcc.target/i386/avx2-vpermps-1.c (avx2_test): Use __m256i type for
	second function argument.
	* gcc.target/i386/avx2-vpermps-2.c (init_permps): Update declaration.
	(calc_permps): Update declaration.  Calculate result correctly.
	(avx2_test): Change src2 type to union256i_d.
	* gcc.target/i386/avx2-vpermd-2.c (calc_permd): Calculate result
	correctly.

2012-04-16  Martin Jambor  <mjambor@suse.cz>

	Backported from mainline

	2012-04-13  Martin Jambor  <mjambor@suse.cz>
	PR middle-end/52939

	* g++.dg/ipa/pr52939.C: New test.

2012-04-15  Jason Merrill  <jason@redhat.com>

	PR c++/52380
	* g++.dg/cpp0x/variadic125.C: New.

	PR c++/52292
	* g++.dg/cpp0x/variadic124.C: New.

2012-04-15  Fabien Chêne  <fabien@gcc.gnu.org>

	PR c++/52465
	* g++.dg/lookup/using52.C: New.

2012-04-13  Jason Merrill  <jason@redhat.com>

	PR c++/52824
	* g++.dg/cpp0x/variadic123.C: New.
	* g++.dg/cpp0x/alias-decl-15.C: Remove dg-errors.

2012-04-11  Jason Merrill  <jason@redhat.com>

	PR c++/52906
	* g++.dg/ext/attrib45.C: New.

2012-04-13  Tom de Vries  <tom@codesourcery.com>

	Backport from mainline r186419.

	2012-04-13  Tom de Vries  <tom@codesourcery.com>

	* gcc.dg/pr52734.c: New test.

2012-04-13  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/52969
	* gcc.dg/torture/pr52969.c: New testcase.

2012-04-13  Richard Guenther  <rguenther@suse.de>

	PR c/52862
	* gcc.dg/pr52862.c: New testcase.

2012-04-12  Michael Meissner  <meissner@linux.vnet.ibm.com>

	Backport from mainline